--- a/AUI_Lab-order/src/main/resources/application.properties
+++ b/AUI_Lab-order/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
 
+#spring.datasource.url=jdbc:h2:file:/tmp/simple-rpg-character;AUTO_SERVER=TRUE
 spring.datasource.url=jdbc:h2:mem:AUI_Lab-order
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
